--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset ="utf-8">
 	<title>My first project</title>
+	<link type="text/css" rel="stylesheet" href="style.css">
 </head>
 <body>
+	<nav>
+		<ul>
+			<li><a href="#">home</a></li>
+			<li><a href="#">work</a></li>
+			<li><a href="#">blog</a></li>
+			<li><a href="#">pages</a></li>
+			<li><a href="#">shortcodes</a></li>
+			<li><a href="#">contact</a></li>
+		</ul>
+	</nav>
 
 </body>
 </html>
