--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 	<meta charset ="utf-8">
 	<title>My first project</title>
 	<link type="text/css" rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet" type="text/css">
 </head>
 <body>
 	<nav>
 		<ul>
-			<li><a href="#">home</a></li>
-			<li><a href="#">work</a></li>
-			<li><a href="#">blog</a></li>
-			<li><a href="#">pages</a></li>
-			<li><a href="#">shortcodes</a></li>
-			<li><a href="#">contact</a></li>
+			<li><a href="#home">home</a></li>
+			<li><a href="#work">work</a></li>
+			<li><a href="#blog">blog</a></li>
+			<li><a href="#pages">pages</a></li>
+			<li><a href="#shortcodes">shortcodes</a></li>
+			<li><a href="#contact">contact</a></li>
 		</ul>
 	</nav>
 
