--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 	</nav>
 <br>
 <!--carousel starts-->
-
-<div id="carousel" class="carousel slide" data-ride="carousel">
+	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -32,36 +31,38 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-       <img class="img-responsive" src="images/slide1.jpg" alt="...">
+      <img src="images/slide1.jpg" alt="...">
       <div class="carousel-caption">
-        <h1>Gravity</h1>
-        <p>The Gravity is a design studio in Novaland, New Gate. We care about users, with an eye to the past. And of course with a vision of the future we are creating a truly best products.</p>
+      	<h1>Gravity</h1>
+      	    <p>The Gravity is a design studio in Novaland, New Gate. We care about users, with an eye to the past. And of course with a vision of the future we are creating a truly best products.</p>
       </div>
     </div>
     <div class="item">
-      <img class"img-responsive" src="images/slide1.jpg" alt="...">
+      <img src="images/slide1.jpg" alt="...">
       <div class="carousel-caption">
-        <h1>Gravity</h1>
-        <p>he Gravity is a design studio in Novaland, New Gate. We care about users, with an eye to the past. And of course with a vision of the future we are creating a truly best products.</p>
-      </div> 
+       <h1>Gravity</h1>
+       	    <p>The Gravity is a design studio in Novaland, New Gate. We care about users, with an eye to the past. And of course with a vision of the future we are creating a truly best products.</p>
+        ...
+      </div>
     </div>
   </div>
-  </div>
-<!--carousel finishes -->
 
-
-<!--left and right controls-->
-
-<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
-<!--controls finish-->
+</div>
 
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha256-Sk3nkD6mLTMOF0EOpNtsIry+s1CsaqQC1rVLTAy+0yc= sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
+<!--carousel finishes -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+</div>
+
 </body>
 </html>
