--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 	<title>My first project</title>
 	<link type="text/css" rel="stylesheet" href="style.css">
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet" type="text/css">
 
 </head>
-<body>
+	<body>
 	<nav>
+		<p>
+			<img src="images/supernova.png" alt="...">
+		</p>
 		<ul>
 			<li><a href="#home">home</a></li>
 			<li><a href="#work">work</a></li>
@@ -19,13 +21,14 @@
 			<li><a href="#contact">contact</a></li>
 		</ul>
 	</nav>
-<br>
+
 <!--carousel starts-->
 	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
   </ol>
 
   <!-- Wrapper for slides -->
@@ -42,9 +45,14 @@
       <div class="carousel-caption">
        <h1>Gravity</h1>
        	    <p>The Gravity is a design studio in Novaland, New Gate. We care about users, with an eye to the past. And of course with a vision of the future we are creating a truly best products.</p>
-        ...
       </div>
-    </div>
+  </div>
+   <div class="item">
+      <img src="images/slide1.jpg" alt="...">
+      <div class="carousel-caption">
+       <h1>Gravity</h1>
+       	    <p>The Gravity is a design studio in Novaland, New Gate. We care about users, with an eye to the past. And of course with a vision of the future we are creating a truly best products.</p>
+      </div>
   </div>
 
   <!-- Controls -->
@@ -59,8 +67,10 @@
 </div>
 
 <!--carousel finishes -->
+<!--script for carousel-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<!--script for carousel finishes-->
 
 </div>
 
