modified carousel caption

--- a/index.html
+++ b/index.html
@@ -36,22 +36,25 @@
     <div class="item active">
       <img src="images/slide1.jpg" alt="...">
       <div class="carousel-caption">
-      	<h1>Gravity</h1>
-      	    <p>The Gravity is a design studio in Novaland, New Gate. We care about users, with an eye to the past. And of course with a vision of the future we are creating a truly best products.</p>
+      	<h3>The</h3>
+      		<h1>Gravity</h1>
+      	    	<p>The Gravity is a design studio in Novaland, New Gate. We care about users, with an eye to the past. And of course with a vision of the future we are creating a truly best products.</p>
       </div>
     </div>
     <div class="item">
       <img src="images/slide1.jpg" alt="...">
       <div class="carousel-caption">
-       <h1>Gravity</h1>
-       	    <p>The Gravity is a design studio in Novaland, New Gate. We care about users, with an eye to the past. And of course with a vision of the future we are creating a truly best products.</p>
+       <h3>The</h3>
+       		<h1>Gravity</h1>
+       	    	<p>The Gravity is a design studio in Novaland, New Gate. We care about users, with an eye to the past. And of course with a vision of the future we are creating a truly best products.</p>
       </div>
   </div>
    <div class="item">
       <img src="images/slide1.jpg" alt="...">
       <div class="carousel-caption">
-       <h1>Gravity</h1>
-       	    <p>The Gravity is a design studio in Novaland, New Gate. We care about users, with an eye to the past. And of course with a vision of the future we are creating a truly best products.</p>
+       	<h3>The</h3>
+       		<h1>Gravity</h1>
+       	    	<p>The Gravity is a design studio in Novaland, New Gate. We care about users, with an eye to the past. And of course with a vision of the future we are creating a truly best products.</p>
       </div>
   </div>
 
