removed gradient from carousel, added icons

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="images/slide1.jpg" alt="...">
+      <img src="images/slide1.jpg" class="img-responsive" alt="...">
       <div class="carousel-caption">
       	<h3>The</h3>
       		<h1>Gravity</h1>
@@ -42,7 +42,7 @@
       </div>
     </div>
     <div class="item">
-      <img src="images/slide1.jpg" alt="...">
+      <img src="images/slide1.jpg" class="img-responsive" alt="...">
       <div class="carousel-caption">
        <h3>The</h3>
        		<h1>Gravity</h1>
@@ -50,7 +50,7 @@
       </div>
   </div>
    <div class="item">
-      <img src="images/slide1.jpg" alt="...">
+      <img src="images/slide1.jpg" class="img-responsive" alt="...">
       <div class="carousel-caption">
        	<h3>The</h3>
        		<h1>Gravity</h1>
@@ -69,13 +69,33 @@
   </a>
 </div>
 
+<br>
+
+<div class="container-fluid">
+	<div class="col-md-4">
+		<img src="images/bubble.png">
+		<h2>Stunning headers</h2>
+		<p>Your bones don't break, mine do. That's clear. Your cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear.</p>
+	</div>
+
+	<div class="col-md-4">
+		<img src="images/heart.png">
+		<h2>Amazing picture boxes</h2>
+		<p>Now that we know who you are, I know who I am. I'm not a mistake! It all makes sense!</p>
+	</div>
+
+	<div class="col-md-4">
+		<img src="images/rocketship.png">
+		<h2>Innovative services</h2>
+		<p>In a comic, you know how you can tell who the arch-villain's going to be? He's the exact opposite of the hero.</p>
+	</div>
+</div>
+
 <!--carousel finishes -->
 <!--script for carousel-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <!--script for carousel finishes-->
-
-</div>
 
 </body>
 </html>
