--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 	</nav>
 
 <!--carousel starts-->
-<div class ="row">
-		<div class="col-md-12">
-		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+<!-- <div class ="row">
+		<div class="col-md-12"> -->
+			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
 	  <ol class="carousel-indicators">
 	    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -70,11 +70,12 @@
 		    <span class="sr-only">Next</span>
 		  </a>
 		</div>
-	</div>
-	</div>
-</div>
+			</div>
+		<!-- </div>
+</div> -->
 
-<br>
+<div class="spacer">
+</div>
 
 <div class="container-fluid">
 	<div class="col-md-4">
