added second set of photos, added page dividers, styled dividers, added icons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>My first project</title>
 	<link type="text/css" rel="stylesheet" href="style.css">
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
 </head>
 	<body>
@@ -102,6 +103,89 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <!--script for carousel finishes-->
+<div class="spacer"> 
+</div>
 
+<hr class="one">
+
+<div class="container-fluid1">
+	<div class="row">
+		<div class="col-md-12">
+	<h2>Design, code &amp; technology</h2>
+		</div>
+	<div class="col-md-12">	
+	<p>Your bones don't break, mine do. That's clear. Your cells react to bacteria and viruses differently than mine. You don't get sick, I do. That's also clear. But for some reason, you and I react the exact same way to water. We swallow it too fast, we choke. We get some in our lungs, we drown. </p>
+	</div>
+	</div>
+</div>
+ 
+
+<div class="spacer">
+</div>
+
+<!-- first set of photos start -->
+
+<div class="container-fluid">
+	<div class="col-md-4">
+		<img src="images/gray.jpg">
+		<h4>Project with Slider</h4>
+		<i class="fa fa-heart"></i>
+		
+	</div>
+
+	<div class="col-md-4">
+		<img src="images/ltgray.jpg">
+		<h4>Project with Single Picture</h4>
+		<i class="fa fa-heart"></i>
+	</div>
+
+	<div class="col-md-4">
+		<img src="images/black.jpg">
+		<h4>Project with Video</h4>
+		<i class="fa fa-heart"></i>
+	</div>
+</div>
+
+<!-- first set finishes -->
+
+<div class="spacer">
+</div>
+<hr class="one">
+
+<div class="container">
+	<h1>Latest from the blog</h1>
+</div>
+
+<div class="spacer">
+</div>
+<!-- second set of photos start -->
+<div class="container-fluid">
+	<div class="col-md-4">
+		<img src="images/rose.jpg">
+		<h3>Robotic Cygnus Spacecraft 1st Space Station Test Flight</h3>
+			<p>Development, Web Design</p>
+			<hr class="two">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo laboriosam, quasi cum quibusdam provident necessitatibus totam. Impedit repellat ipsa dignissimos blanditiis perspiciatis nihil amet magnam vel mollitia ducimus, numquam vitae!</p>
+		
+	</div>
+
+	<div class="col-md-4">
+		<img src="images/ltblue.jpg">
+		<h3>New Zealand Volcano Eruption Seen from Space</h3>
+		<p>Development, Web Design</p>
+		<hr class="two">
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor dolorum aliquam facere nobis enim! Pariatur quasi numquam totam officia tenetur, aperiam reiciendis, quo corporis ea facilis facere qui, voluptates alias.</p>
+	</div>
+			
+
+	<div class="col-md-4">
+		<img src="images/charcoal.jpg">
+		<h3>Vote Now! Top Space Stories of the Week- Sept. 2, 2012</h3>
+			<p>Development, Web Design</p>
+			<hr class="two">
+			<p> Ipsa facilis sit consectetur doloremque laudantium sunt assumenda doloribus id corporis magni! Et, commodi.</p>
+	</div>
+</div>
+<!-- second set finishes -->
 </body>
 </html>
