--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 			</div>
 		</div>
 	</div>
-	</div>
+	</div>	
 </div>
 
 <!--second set finishes-->
@@ -234,9 +234,16 @@
 <div class="spacer">
 </div>
 	<img src="images/supernova.png">
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus delectus asperiores esse dolore, quam nostrum maiores expedita aperiam commodi nobis? Veritatis praesentium assumenda amet ipsa. Mollitia debitis, totam a? Vel!</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus delectus asperiores esse dolore, quam nostrum maiores expedita aperiam commodi nobis? Veritatis praesentium assumenda amet ipsa. Mollitia debitis, totam a? Vel! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique mollitia libero nostrum in explicabo, neque, ex deleniti autem aspernatur. Enim aperiam quis est magni possimus eveniet. In quod deserunt libero.</p>
+	<div class="social">
+		<i class="fa fa-twitter"></i>
+		<i class="fa fa=facebook"></i>
+		<i class="fa fa-linkedin"></i>
+		<i class="fa fa-pinterest"></i>
+		<i class="fa fa-vimeo"></i>
+	</div>
 
-<div class="spacer">
+<div class="spacer1">
 </div>
 </div>
 <footer>
