added footer, social media buttons, navigation buttons

--- a/index.html
+++ b/index.html
@@ -248,13 +248,16 @@
 </div>
 <footer>
 <p>&copy; 2013 Supernova. All Rights Reserved</p>
-<nav>
 	<ul>
 		<li><a href="#">Legal</li>
 		<li><a href="#">Privacy</li>
 		<li><a href="#">Contact</li>
 	</ul>
-</nav>
 </footer>
+<!--up and down arrows -->
+<div class="arrows">
+	<i class="glyphicon glyphicon-menu-up"></i>
+	<i class="glyphicon glyphicon-menu-down"></i>
+</div>
 </body> 
 </html>
